# ebs-firmware-serial-test

./: .gitignore  .gitmodules
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.h  application_descriptors.c  devicemap.h  main.c  serial_test.c  serial_test.h
src/asp/: CMakeLists.txt  hardware.h
src/hal/: CMakeLists.txt  uc.h
src/sys/: CMakeLists.txt  bciface.h  sys.h
