CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
CMAKE_POLICY(SET CMP0007 NEW)

SET(FIRMWARE_NAME ebs-serial-test)

PROJECT(${FIRMWARE_NAME} C)

SET(PROJECT_DESCRIPTION     "EBS serial interface test firmware")
SET(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
SET(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
SET(PROJECT_LICENSE         "GPLv3")

SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 1)
SET(PROJECT_VERSION_PATCH 0)
SET(PROJECT_VERSION_TWEAK 0)

INCLUDE(ebs/exe-conf)

INSTALL(SCRIPT default-install.cmake)

